# SchaakStudieSpinsels2

./: .gitignore  .gitmodules  CLAUDE.md  CNAME  Makefile  README.md  analysis.ipynb  archives.html  astro.config.mjs  categories.html  index.html  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tailwind.config.mjs  tasks.py  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pelican.yml
content/: ten_geleide.md  voorwoord.md
content/js/: 001.js
content/pages/: bijna_miniaturen.md  de_bermuda_driehoek.md  een_fidele_boel.md  een_vervelende_viervoeter.md  enkele_voor_en_nabeschouwingen.md  het_wilde_westen.md  maljutkas.md  manke_maljutkas.md  mini_studies.md  miniaturen.md  studies.md  ten_geleide.md  voorwoord.md  you_feel_at_ease_in_your_command_of_english.md
css/: cover.css
data/: schaakstudiespinsels2.docx  schaakstudiespinsels2_from_docx.txt  schaakstudiespinsels2_from_pdf.txt
js/: chessboard-1.0.0.min.js
output/: archives.html  authors.html  categories.html  index.html  tags.html  ten-geleide.html  voorwoord.html
pages/: -1-.html  bijna-miniaturen.html  een-fidele-boel.html  enkele-voor-en-nabeschouwingen.html  maljutkas.html  mini-studies.html  miniaturen.html  studies.html  ten-geleide.html  voorwoord.html  you-feel-at-ease-in-your-command-of-english.html
scripts/: build_study.py  classify_position.py  generate_piece_sprite.py  parse_endgames.py  parse_endgames_from_docx.py  parse_study.py  pdf_processing.py  port_pelican_pages.py  study_extractor.py
(+82 files in other folders)
